커밋 정의 내용 추가

--- a/2장/2-31)git이 관리하는 새 영역.md
+++ b/2장/2-31)git이 관리하는 새 영역.md
@@ -1,3 +1,7 @@
 git config --global user.name "GyeongJu Son"
 git config --global user.email "sohn0356@gmail.com"
 git config --global -l
+
+커밋이란?
+1. 스테이징 영역의 변경사항을 레포지토리에 저장하는 행위
+2. 변경사항을 묶어주는 단위
